--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,11 +2,10 @@
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
+        <a href="./gallery.html" class="nav-link">Gallery</a>
       </li>
-
       <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
+        <a href="./feedback.html" class="nav-link">Feedback</a>
       </li>
     </ul>
   </nav>
