--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,10 +2,10 @@
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
-        <a href="./gallery.html" class="nav-link">Gallery</a>
+        <a href="../gallery.html" class="nav-link">Gallery</a>
       </li>
       <li class="nav-item">
-        <a href="./feedback.html" class="nav-link">Feedback</a>
+        <a href="../feedback.html" class="nav-link">Feedback</a>
       </li>
     </ul>
   </nav>
